--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <body>
         <h1>
-            That's Bobi
+            MythBuster Izlıyoduuuuuuuuuum
         </h1>
         
         <img src="bobi.jpeg"/>
