--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             .quote h2{
                 font-family: 'Akaya Kanadaka', cursive, Arial;
                 color: white;
-                -webkit-text-stroke: 0.015 rgb(0, 0, 0); 
+                -webkit-text-stroke: 0.015em rgb(0, 0, 0); 
                 font-size: 3.5em;
             }
 
