--- a/portfolio.html
+++ b/portfolio.html
@@ -185,6 +185,7 @@
                 color: white;
                 -webkit-text-stroke: 0.1vmin rgb(0, 0, 0); 
                 font-size: 5vmin;
+                font-weight: bold;
             }
 
             footer a:hover{
